--- a/packages/pangea-sdk/pom.xml
+++ b/packages/pangea-sdk/pom.xml
@@ -204,6 +204,8 @@
           <version>1.0.1</version>
           <executions>
               <execution>
+                  <id>sign-artifacts</id>
+                  <phase>verify</phase>
                   <goals>
                       <goal>sign</goal>
                   </goals>
