--- a/packages/pangea-sdk/pom.xml
+++ b/packages/pangea-sdk/pom.xml
@@ -235,6 +235,24 @@
             <autoReleaseAfterClose>true</autoReleaseAfterClose>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-source-plugin</artifactId>
+          <version>3.2.1</version>
+          <executions>
+            <execution>
+              <id>attach-sources</id>
+              <goals>
+                <goal>jar</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>license-maven-plugin</artifactId>
+          <version>2.0.0</version>      
+        </plugin>
       </plugins>
     </pluginManagement>
 
@@ -266,6 +284,24 @@
           <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
           <autoReleaseAfterClose>true</autoReleaseAfterClose>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <version>2.0.0</version>
+        <configuration>
+            <licenseName>pangea</licenseName>
+            <licenseResolver>${project.baseUri}/src/license</licenseResolver>
+        </configuration>
+        <executions>
+            <execution>
+                <id>first</id>
+                <goals>
+                    <goal>update-file-header</goal>
+                </goals>
+                <phase>process-sources</phase>
+            </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
