--- a/packages/pangea-sdk/pom.xml
+++ b/packages/pangea-sdk/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>cloud.pangea</groupId>
   <artifactId>pangea-sdk</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>cloud.pangea:pangea-sdk</name>
@@ -51,7 +51,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>16</maven.compiler.source>
-    <maven.compiler.target>18</maven.compiler.target>
+    <maven.compiler.target>18</maven.compiler.target>    
   </properties>
 
   <dependencies>
@@ -285,6 +285,7 @@
           <autoReleaseAfterClose>true</autoReleaseAfterClose>
         </configuration>
       </plugin>
+      <!--
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>license-maven-plugin</artifactId>
@@ -292,6 +293,8 @@
         <configuration>
             <licenseName>pangea</licenseName>
             <licenseResolver>${project.baseUri}/src/license</licenseResolver>
+            <organizationName>Pangea Cynber</organizationName>
+            <inceptionYear>2021</inceptionYear>
         </configuration>
         <executions>
             <execution>
@@ -303,6 +306,7 @@
             </execution>
         </executions>
       </plugin>
+      -->
     </plugins>
   </build>
 
