--- a/packages/pangea-sdk/pom.xml
+++ b/packages/pangea-sdk/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>cloud.pangea</groupId>
   <artifactId>pangea-sdk</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
 
   <name>cloud.pangea:pangea-sdk</name>
@@ -21,6 +21,14 @@
       <organizationUrl>https://pangea.cloud/</organizationUrl>
     </developer>
   </developers>
+
+  <licenses>
+    <license>
+      <name>MIT</name>
+      <url>https://opensource.org/licenses/MIT</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
 
   <scm>
     <connection>scm:git:git://github.com/pangeacyber/pangea-java.git</connection>
@@ -240,6 +248,7 @@
           <artifactId>license-maven-plugin</artifactId>
           <version>2.0.0</version>      
         </plugin>
+        
       </plugins>
     </pluginManagement>
 
@@ -292,7 +301,7 @@
         <version>2.0.0</version>
         <configuration>
             <licenseName>pangea</licenseName>
-            <licenseResolver>${project.baseUri}/src/license</licenseResolver>
+            <licenseResolver>${project.baseUri}src/license</licenseResolver>
             <organizationName>Pangea Cynber</organizationName>
             <inceptionYear>2021</inceptionYear>
         </configuration>
@@ -307,6 +316,22 @@
         </executions>
       </plugin>
       -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.4.1</version>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+            <configuration>
+              <doclint>none</doclint>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
