--- a/examples/intel/file/lookup/pom.xml
+++ b/examples/intel/file/lookup/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>cloud.pangeacyber.examples</groupId>
-  <artifactId>redact_text</artifactId>
+  <artifactId>domain_lookup</artifactId>
   <version>1.0.0</version>
 
-  <name>redact_text</name>
+  <name>domain_lookup</name>
   <url>http://pangea.cloud</url>
 
   <properties>
@@ -23,7 +23,7 @@
         <name>ossrh-snapshot</name>
         <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
         <snapshots>
-          <enabled>true</enabled>
+            <enabled>true</enabled>
           <updatePolicy>always</updatePolicy>
         </snapshots>
         <releases>
