--- a/examples/vault/encrypt/pom.xml
+++ b/examples/vault/encrypt/pom.xml
@@ -36,7 +36,7 @@
     <dependency>
       <groupId>cloud.pangea</groupId>
       <artifactId>pangea-sdk</artifactId>
-      <version>1.5.0-SNAPSHOT</version>
+      <version>1.5.0</version>
     </dependency>
 
     <dependency>
