Add operation ID tag to mvn javadoc config

--- a/packages/pangea-sdk/pom.xml
+++ b/packages/pangea-sdk/pom.xml
@@ -345,6 +345,11 @@
               <placement>a</placement>
               <head>Example:</head>
             </tag>
+            <tag>
+              <name>pangea.operationId</name>
+              <placement>a</placement>
+              <head>Operation ID:</head>
+            </tag>
           </tags>
         </configuration>
       </plugin>
