--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,9 @@ repos:
     hooks:
       - id: check-json
       - id: end-of-file-fixer
-      - id: trailing-whitespace
+      -
+        id: trailing-whitespace
+        exclude: .md
       - id: check-merge-conflict
       - id: debug-statements
       - id: detect-aws-credentials
