--- a/packages/pangea-sdk/pom.xml
+++ b/packages/pangea-sdk/pom.xml
@@ -66,6 +66,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.samba.jcifs</groupId>
+      <artifactId>jcifs</artifactId>
+      <version>1.3.3</version> <!-- Use the latest version available -->
+    </dependency>
+    <dependency>
       <groupId>org.bouncycastle</groupId>
       <artifactId>bcpkix-jdk15on</artifactId>
       <version>1.70</version>
