--- a/packages/pangea-sdk/pom.xml
+++ b/packages/pangea-sdk/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>cloud.pangea</groupId>
   <artifactId>pangea-sdk</artifactId>
-  <version>2.3.0</version>
+  <version>3.0.0</version>
   <packaging>jar</packaging>
 
   <name>cloud.pangea:pangea-sdk</name>
@@ -206,7 +206,7 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
-        <plugin>
+        <!-- <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>3.4.1</version>
@@ -218,7 +218,7 @@
               </goals>
             </execution>
           </executions>
-        </plugin>
+        </plugin> -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
@@ -248,7 +248,7 @@
           </executions>
         </plugin>
         -->
-        <plugin>
+        <!-- <plugin>
           <groupId>org.simplify4u.plugins</groupId>
           <artifactId>sign-maven-plugin</artifactId>
           <version>1.0.1</version>
@@ -264,7 +264,7 @@
               </configuration>
             </execution>
           </executions>
-        </plugin>
+        </plugin> -->
         <plugin>
           <groupId>org.sonatype.plugins</groupId>
           <artifactId>nexus-staging-maven-plugin</artifactId>
@@ -281,11 +281,11 @@
           <artifactId>license-maven-plugin</artifactId>
           <version>2.0.0</version>
         </plugin>
-        <plugin>
+        <!-- <plugin>
           <groupId>cloud.pangea</groupId>
           <artifactId>jsondoclet-maven-plugin</artifactId>
           <version>1.0.0-SNAPSHOT</version>
-        </plugin>
+        </plugin> -->
       </plugins>
     </pluginManagement>
 
@@ -303,7 +303,7 @@
           </execution>
         </executions>
       </plugin>
-      <plugin>
+      <!-- <plugin>
         <groupId>org.simplify4u.plugins</groupId>
         <artifactId>sign-maven-plugin</artifactId>
         <version>1.0.1</version>
@@ -319,7 +319,7 @@
             </configuration>
           </execution>
         </executions>
-      </plugin>
+      </plugin> -->
       <plugin>
         <groupId>org.sonatype.plugins</groupId>
         <artifactId>nexus-staging-maven-plugin</artifactId>
@@ -353,7 +353,7 @@
         </executions>
       </plugin>
       -->
-      <plugin>
+      <!-- <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.4.1</version>
@@ -377,7 +377,7 @@
             </tag>
           </tags>
         </configuration>
-      </plugin>
+      </plugin> -->
 
       <!-- our custom JSON doclet used for generating Pangea SDK docs -->
       <!-- <plugin>
