--- a/packages/pangea-sdk/pom.xml
+++ b/packages/pangea-sdk/pom.xml
@@ -353,7 +353,7 @@
         </executions>
       </plugin>
       -->
-      <!-- <plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.4.1</version>
@@ -377,7 +377,7 @@
             </tag>
           </tags>
         </configuration>
-      </plugin> -->
+      </plugin>
 
       <!-- our custom JSON doclet used for generating Pangea SDK docs -->
       <!-- <plugin>
