--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -1,5 +1,5 @@
 variables:
-  MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode"
+  MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode --errors"
   MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
 
 .java-sdk-base:
