--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,8 +16,8 @@ repos:
         args:
           - --branch
           - main
-  - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
-    rev: v2.4.0
-    hooks:
-      - id: pretty-format-java
-        args: [--autofix, --indent '4']
+  # - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
+  #   rev: v2.12.0
+  #   hooks:
+  #     - id: pretty-format-java
+  #       args: [--autofix, --indent '4']
