--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,11 @@
 root = true
 
 [*]
-indent_style = tab
+indent_style = space
 trim_trailing_whitespace = true
 
 [*.java]
+indent_style = tab
 indent_size = 4
 
 [*.xml]
