--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,8 @@ stages:
   - build
   - test
   - publish
+  - examples
 
 include:
   - /packages/pangea-sdk/.sdk-ci.yml
+  - /examples/.examples-ci.yml
