--- a/examples/audit/log_bulk/pom.xml
+++ b/examples/audit/log_bulk/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>cloud.pangeacyber.examples</groupId>
-  <artifactId>log</artifactId>
+  <artifactId>log_bulk</artifactId>
   <version>2.0.0</version>
 
-  <name>log</name>
+  <name>log_bulk</name>
   <url>http://pangea.cloud</url>
 
   <properties>
