fixup! use maven-compiler-plugin v3.12.1

--- a/examples/authn/invite_actions/pom.xml
+++ b/examples/authn/invite_actions/pom.xml
@@ -21,4 +21,15 @@
       <version>3.6.0</version>
     </dependency>
   </dependencies>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.12.1</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
