--- a/.editorconfig
+++ b/.editorconfig
@@ -8,5 +8,8 @@ trim_trailing_whitespace = true
 indent_style = tab
 indent_size = 4
 
+[*.md]
+trim_trailing_whitespace = false
+
 [*.xml]
 indent_size = 2
