--- a/packages/pangea-sdk/pom.xml
+++ b/packages/pangea-sdk/pom.xml
@@ -58,8 +58,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>16</maven.compiler.source>
-    <maven.compiler.target>18</maven.compiler.target>
+    <maven.compiler.release>17</maven.compiler.release>
     <!-- By default just re-write code with prettier -->
     <plugin.prettier.goal>write</plugin.prettier.goal>
   </properties>
