--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -24,7 +24,7 @@ java-sdk-integration-tests:
     SERVICE_FILE_INTEL_ENV: LVE
     SERVICE_USER_INTEL_ENV: LVE
     SERVICE_REDACT_ENV: LVE
-    SERVICE_VAULT_ENV: DEV
+    SERVICE_VAULT_ENV: LVE
 
   before_script:
     - echo $ENV
