Disable tests in publishing job

--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -110,4 +110,4 @@ publishing-sdk:
   extends: .java-sdk-publish
   stage: publish
   script:
-    - mvn $MAVEN_CLI_OPTS deploy
+    - mvn $MAVEN_CLI_OPTS deploy -Dmaven.test.skip=true
