--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 default:
   image: maven:3-openjdk-18@sha256:f22971fa3103b6a5145741dd80cc1660490bef93deb6400276c96dadf5bfd75f
   tags:
-    - pangea-internal-x86
+    - pangea-internal
 
 stages:
   - build
