--- a/examples/.examples-ci.yml
+++ b/examples/.examples-ci.yml
@@ -55,11 +55,11 @@ examples:
           - vault/sign
           - audit/log_bulk_async_with_vault
           - vault/get
-          - share/folder_create_and_delete
-          - share/item_life_cycle
-          - share/put_split_upload
-          - share/put_transfer_method_multipart
-          - share/put_transfer_method_post_url
+          # - share/folder_create_and_delete
+          # - share/item_life_cycle
+          # - share/put_split_upload
+          # - share/put_transfer_method_multipart
+          # - share/put_transfer_method_post_url
 
   image: maven:3.9.6-eclipse-temurin-${JAVA_VERSION}
   before_script:
