Sanitize - Implementation and tests

--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -26,6 +26,7 @@ sdk-integration-tests:
     SERVICE_FILE_INTEL_ENV: LVE
     SERVICE_USER_INTEL_ENV: LVE
     SERVICE_REDACT_ENV: LVE
+    SERVICE_SANITIZE_ENV: LVE
     SERVICE_VAULT_ENV: LVE
 
   before_script:
@@ -84,6 +85,9 @@ sdk-integration-tests:
       - CLOUD: [AWS, GCP]
         ENV: ${SERVICE_REDACT_ENV}
         TEST: ITRedactTest
+      - CLOUD: [AWS]
+        ENV: ${SERVICE_SANITIZE_ENV}
+        TEST: ITSanitizeTest
       - CLOUD: [AWS, GCP]
         ENV: ${SERVICE_VAULT_ENV}
         TEST: ITVaultTest
