--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,9 @@ end_of_line = lf
 indent_style = space
 trim_trailing_whitespace = true
 
+[*.sh]
+indent_size = 4
+
 [*.java]
 indent_style = tab
 indent_size = 4
