Add retry to integration and examples tests

--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -12,6 +12,7 @@ variables:
 
 sdk-integration-tests:
   stage: integration_tests
+  retry: 2
   variables:
   # Set each service test environment
     SERVICE_AUDIT_ENV: LVE
